# marginal-gains

./: Dockerfile  Marginal_Gains.py  README.md  bk.railway.json  config.py  menus.py  plots.py  pyproject.toml  railway.json  requirements.txt  ruff.toml  uploaded_2019_MTB_XC_.fit  uploaded_2022-01-04-18-17-08.fit  uploaded_24_HOP_lap_5_Team_got_second.fit  uploaded_Trevor 1.fit  uploaded_vincent_lap_2_24HOP_14010180820_ACTIVITY.fit
.devcontainer/: devcontainer.json
pages/: Create Ramp Test.py  Critical Power.py  Efficiency.py  HR Decoupling.py  Ramp Test.py  hr_decoupling_plot.ipynb
